--- a/app.json
+++ b/app.json
@@ -10,14 +10,18 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.cosminmare.distract"
+      "bundleIdentifier": "com.cosminmare.distract",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.cosminmare.distract"
+      "package": "com.cosminmare.distract",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
