--- a/app.json
+++ b/app.json
@@ -31,9 +31,13 @@
     "plugins": [
       "expo-router",
       [
-        "expo-splash-screen",
+        "expo-notifications",
         {
-          "image": "./assets/images/splash-icon.png",
+          "sounds": ["./alarm.wav"]
+        }
+      ], [
+        "expo-splash-screen",
+        {"image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
