--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "DISTRACT",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.cosminmare.distract",
@@ -26,7 +26,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./icon.png"
     },
     "plugins": [
       "expo-router",
@@ -37,7 +37,7 @@
         }
       ], [
         "expo-splash-screen",
-        {"image": "./assets/images/splash-icon.png",
+        {"image": "./icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
